<resources>
    <string name="app_name">Presence</string>
    <string name="accepter">Accepter</string>
    <string name="numros_etudiant">Numéros Etudiant</string>
    <string name="hint">hint</string>
    <string name="conditions_g_n_rales">Conditions générales</string>
    <string name="etudiant">Etudiant</string>
    <string name="exit">exit</string>
    <string name="derni_res_connexions">Dernières Connexions</string>
    <string name="numeros">numeros</string>
    <string name="conditions">En acceptant les conditions générales, vous acceptez l\'utilisation du bluetooth ainsi que de votre numéro étudiant à des fins de suivi d\'alternance. Si vous refusez, il vous sera demandé de signer matin et après-midi une version papier de pointage au bureau de votre responsable de formation.</string>
    <string name="connect">Connecté</string>
    <string name="textview">TextView</string>
    <string name="readme">/Notes/readme.txt</string>
    <string name="valider_ma_pr_sence">Valider ma présence</string>
    <string name="_12345678">12345678</string>
    <string name="tes_vous">Êtes-vous :</string>
    <string name="nom_pr_nom">Nom Prénom</string>
    <string name="oui">OUI</string>
    <string name="non">NON</string>
    <string name="etucheck">EtuCheck</string>
    <string name="valider">valider</string>


</resources>